--- a/qs/templates/partial/base.html
+++ b/qs/templates/partial/base.html
@@ -1,83 +1,20 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-  <!--<meta name="description" content="">-->
-  <!--<meta name="author" content="">-->
-  <!--<link rel="icon" href="../../favicon.ico">
-  -->
-  <title> Repository</title>
+{% extends "partial/assets.html" %}
 
-  <!-- Bootstrap core CSS -->
-  <!--<link href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-  -->
-  <!-- Custom styles for this template -->
-  <!--<link href="navbar.css" rel="stylesheet">
-  -->
-  <link href=" {%static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  <!-- link fonticon -->
-  <link rel="stylesheet" href="{%static 'css/font-awesome.min.css' %}">
-  <link href=" {%static 'css/layoutit.css' %}" rel="stylesheet">
-  <link href=" {%static 'css/docs.min.css' %}" rel="stylesheet">
 
-  <!--<link href=" {% static 'editor/editor.css' %}" rel="stylesheet">
-  -->
-  <!--<link href=" {% static 'editor/editor.js' %}" rel="stylesheet">
-  -->
-  <!--<link href=" {% static 'editor/marked.js' %}" rel="stylesheet">
-  -->
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/editor/0.1.0/editor.css">
+{% block header %}
 
-  <!-- link itss style -->
 
-  <link rel="stylesheet" href=" {%static 'css/base.css' %}">
-  <script src="//cdn.jsdelivr.net/editor/0.1.0/editor.js"></script>
-  <script src="//cdn.jsdelivr.net/editor/0.1.0/marked.js"></script>
-<!--   // <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
+  {% if messages %}
+  <ul class="messages">
+      {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+  </ul>
+  {% endif %}
 
-  {% block head %}
 
-  {% endblock %}
-
-</head>
-
-<body>
-  <!-- include header -->
   {% include "partial/_header.html" %}
-  <!--container-question-->
-  <div class="container itss-content">
-    {% block mainbody %}
 
-     {% endblock %}
-  </div>
 
-  <!-- include footer -->
-  <!--{% include "partial/_footer.html" %}-->
+{% endblock %}
 
-  <!-- block subpage add html or scripts -->
-  {% block others %}
-
-    {% endblock %}
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-  <script src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<!--   // <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
-
-  <script>
-    window.onload=function(){
-      var editor = new Editor();
-      editor.render();
-    }
-  </script>
-  {% block foot %}
-
-  {% endblock %}
-</body>
-</html>
