完成github绑定基本流程

--- a/user/templates/user/include/oauth.html
+++ b/user/templates/user/include/oauth.html
@@ -1,7 +1,20 @@
+{% for oauth in oauth_list%}
+    {% if oauth.type_oauth = 1 %}
+        <a href="{{oauth.link_oauth}}" target="_blank"> <img src="/static/img/github_login_logo_s.png"> </a>
+    {% elif oauth.type_oauth = 2%}
+    {% elif oauth.type_oauth = 3%}
+    {% elif oauth.type_oauth = 4%}
+    {% endif %}
+{% endfor %}
+
+
+{% include 'user/include/oauth.html' %}
+
+
 
 <div >
     已绑定帐号
-    {% if profile.use_github %}
+    {% if oauth.type_oauth = 1 %}
         {% profile.link_github %}
     {% endif %}
 </div>
