实现github、weibo接入，放弃qq接入

--- a/qs/static/css/index.css
+++ b/qs/static/css/index.css
@@ -115,4 +115,9 @@
     .sidebar-box .qalist small {
       font-size: 13px; }
 
+.oauth img {
+    width: 16px;
+}
+
 /*# sourceMappingURL=index.css.map */
+
