--- a/qs/templates/partial/assets.html
+++ b/qs/templates/partial/assets.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <!--<meta name="description" content="">-->
-    <!--<meta name="author" content="">-->
-    <!--<link rel="icon" href="../../favicon.ico">
-    -->
+
+    <meta property="wb:webmaster" content="53e6f5d6e4d9dd15" />
+    <meta property="qc:admins" content="705520271073147216052" />
     <title> Repository</title>
 
     <!-- Bootstrap core CSS -->
