--- a/user/templates/user/bind.html
+++ b/user/templates/user/bind.html
@@ -16,7 +16,8 @@
     <h1 class="h4 text-center text-muted login-title">完善资料</h1>
 
     <p class="title-description">
-        您正在使用 <span class="icon-sn-github"></span>
+        您正在使用
+        <!--<span class="icon-sn-github"></span>-->
         <a href="{{ request.session.link }}" target="_blank">{{ request.session.typename }}账号</a>
     </p>
 
