--- a/qs/templates/partial/_header.html
+++ b/qs/templates/partial/_header.html
@@ -69,7 +69,7 @@
                                 </li>
                             </ul>
                         {% else %}
-                            <li><a href="{% url 'django.contrib.auth.views.login' %}">登录</a></li>
+                            <li><a href="{% url 'login_' %}">登录</a></li>
                             <li><a href="{% url 'register'  %}">注册</a></li>
                         {% endif %}
                     </li>
