--- a/qs/templates/qs/node/detail.html
+++ b/qs/templates/qs/node/detail.html
@@ -14,7 +14,7 @@
     <button class="fa fa-caret-down up"></button>
   </div>
 
-  <a href="{% url 'detail'  pk=detail_qs.pk|default:1%}">{{detail_qs.title}}</a>
+  <a href="{% url 'qs:detail'  pk=detail_qs.pk|default:1%}">{{detail_qs.title}}</a>
 </h3>
 <div class="clearfix">
   <div class="col-md-8">
@@ -22,9 +22,9 @@
     最后编辑时间：{{detail_qs.last_edited}}
     &nbsp;&nbsp;
     {% if user.is_authenticated %}
-      <a class="" href="{% url 'edit_qs' pk=detail_qs.pk %}">修改</a>
+      <a class="" href="{% url 'qs:edit_qs' pk=detail_qs.pk %}">修改</a>
       {% if user == detail_qs.author %}
-      <a class="" href="{% url 'del_qs' pk=detail_qs.pk %}">删除</a>
+      <a class="" href="{% url 'qs:del_qs' pk=detail_qs.pk %}">删除</a>
       {% endif %}
     {% endif %}
   </div>
@@ -57,9 +57,9 @@
     <h4>
       <span>{{ solution.author }} &nbsp; {{ solution.last_edited}}</span>&nbsp;&nbsp;
       {% if user.is_authenticated %}
-      <a class="" href="{% url 'edit_solution' pk=solution.pk %}">修改</a>
+      <a class="" href="{% url 'qs:edit_solution' pk=solution.pk %}">修改</a>
       {% if user == detail_qs.author %}
-      <a class="" href="{% url 'del_solution' pk=solution.pk %}">删除</a>
+      <a class="" href="{% url 'qs:del_solution' pk=solution.pk %}">删除</a>
       {% endif %}
       {% endif %}
     </h4>
@@ -71,7 +71,7 @@
 </div>
 
 <h3>撰写答案</h3>
-<form method="post" action="{% url 'detail' pk=detail_qs.pk %}">
+<form method="post" action="{% url 'qs:detail' pk=detail_qs.pk %}">
   {% csrf_token %}
   {{ form.as_p }}
   <div class="pull-right">
