--- a/qs/templates/qs/post_search_list.html
+++ b/qs/templates/qs/post_search_list.html
@@ -9,7 +9,7 @@
 
     {% for post in posts %}
         <div class="post">
-            <h3><a href="{% url 'qs.views.detail' pk=post.pk %}">{{ post.title }}</a></h3>
+            <h3><a href="{% url 'qs:detail' pk=post.pk %}">{{ post.title }}</a></h3>
         </div>
     {% endfor %}
 
