--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -14,7 +14,7 @@
         你的用户名或密码输入错误
       {% endif %}
     </p>
-    <form class="form-signin" method="post" action="{% url 'login_' %}">
+    <form class="form-signin" method="post" action="{% url 'user:login' %}">
       {% csrf_token %}
       <div class="row">
         <label for="username">用户名:</label>
