--- a/qs/templates/qs/index.html
+++ b/qs/templates/qs/index.html
@@ -3,7 +3,7 @@
 {% load staticfiles%}
 
 {% block head %}
-<link rel="stylesheet" href=" {%static 'css/index.css' %}">
+<link rel="stylesheet" type="text/css" href=" {%static 'css/index.css' %}">
 {% endblock %}
 
 
