--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -49,7 +49,7 @@
                         <a class="name" href="">{{ item.author }}</a>
                         <a class="time" href="">{{ item.created }}</a>
                     </div>
-                    <h2 class="title"><a href="{% url 'qs:detail'  pk=item.pk|default:1%}">{{item.title}}</a></h2>
+                    <h2 class="title"><a href="{{ item.get_absolute_url }}">{{item.title}}</a></h2>
                     <!--<ul class="taglist">-->
                     <!--<li class="tagpopup">-->
                     <!--<a href="" class="tag tag-sm">PHP</a>-->
