--- a/qs/templates/partial/assets.html
+++ b/qs/templates/partial/assets.html
@@ -63,6 +63,8 @@
 <script src="//cdn.jsdelivr.net/editor/0.1.0/editor.js"></script>
 <script src="//cdn.jsdelivr.net/editor/0.1.0/marked.js"></script>
 
+    <script src="{% static 'js/blog.js' %}"></script>
+
 <script>
     window.onload=function(){
       var editor = new Editor();
