--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -30,6 +30,7 @@
         <input type="password" name="password" class="form-control">
         <br>
       </div>
+        <input type="hidden" name="next" value="{{next}}" />
       <div class="row">
         <div class="col-md-6">
           <input type="checkbox" value="remember-me">
